fix layout issue: about me, FreeText

--- a/src/components/Survey/FreeText/styles.scss
+++ b/src/components/Survey/FreeText/styles.scss
@@ -1,6 +1,8 @@
 .root {
   width: 100%;
   margin: 10px;
+  padding: 43px;
+  box-sizing: border-box;
 }
 
 .question-text {
