--- a/src/routes/survey/start/styles.scss
+++ b/src/routes/survey/start/styles.scss
@@ -96,5 +96,6 @@
     width: 100%;
     margin-left: 0px;
     padding-top: 210px;
+    padding-bottom: 80px;
   }
 }
